Never expose internal user IDs publicly
Leaderboards now only return friend codes per
entry, not user IDs. User IDs are only accepted
and returned by `POST /user` and admin endpoints.
This makes account recovery in the event of a user
table drop slightly more secure as adversaries
couldn't enumerate the user IDs for all major
players to then steal their accounts. Instead,
they would have to guess the user's UUID. This is
largely a moot point as matching entries in the
scores table would also be deleted when the users
table was dropped, but still marginally better.
